--- a/index.html
+++ b/index.html
@@ -1,189 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TradeHive Demo</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Trade Hive — VIP Plans</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
 <style>
     body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f7f4;
-        margin: 0;
-        padding: 0;
-        color: #333;
+        background-color: #f8fff9;
+        color: #222;
+    }
+    .navbar {
+        background-color: #006400 !important;
+    }
+    .navbar .nav-link {
+        color: white !important;
     }
     header {
-        background-color: #0a7f3f;
+        background: linear-gradient(135deg, #006400, #228B22);
         color: white;
-        padding: 15px;
-        text-align: center;
-    }
-    h1, h2 {
-        margin: 10px 0;
-    }
-    .container {
-        width: 90%;
-        max-width: 900px;
-        margin: auto;
-        padding: 20px;
     }
     .card {
-        background: white;
-        padding: 20px;
-        margin: 15px 0;
-        border-radius: 8px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    label {
-        font-weight: bold;
-        margin-top: 10px;
-        display: block;
-    }
-    input, select, button {
-        width: 100%;
-        padding: 8px;
-        margin-top: 5px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
-    button {
-        background-color: #0a7f3f;
-        color: white;
-        border: none;
-        cursor: pointer;
-    }
-    button:hover {
-        background-color: #095e30;
-    }
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 15px;
-    }
-    table, th, td {
         border: 1px solid #ddd;
+        background: white;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.05);
     }
-    th, td {
-        padding: 10px;
+    .card-header {
+        background-color: #f5fff5;
+        border-bottom: 1px solid #ccc;
+        color: #006400;
+    }
+    .badge-soft {
+        background: #ff4d4d;
+        color: white;
+        padding: 5px 8px;
+        border-radius: 5px;
+        font-size: 0.8rem;
+    }
+    .btn-brand {
+        background-color: #28a745;
+        color: white;
+    }
+    .btn-brand:hover {
+        background-color: #218838;
+    }
+    .btn-outline-light {
+        border-color: #dc3545;
+        color: #dc3545;
+    }
+    .btn-outline-light:hover {
+        background-color: #dc3545;
+        color: white;
+    }
+    .footer {
+        background-color: #006400;
+        color: white;
         text-align: center;
+        padding: 10px;
+        margin-top: 20px;
     }
-    .status-pending {
-        color: orange;
+    .plan-price {
         font-weight: bold;
-    }
-    .status-completed {
-        color: green;
-        font-weight: bold;
+        color: #006400;
     }
 </style>
 </head>
 <body>
 
-<header>
-    <h1>TradeHive Demo</h1>
-    <p>Deposit • Withdraw • Buy Plan • History</p>
+<nav class="navbar navbar-expand-lg border-bottom border-secondary">
+  <div class="container">
+    <a class="navbar-brand text-white" href="index.html">Trade Hive</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="nav" class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="deposit.html">Deposit</a></li>
+        <li class="nav-item"><a class="nav-link" href="withdraw.html">Withdraw</a></li>
+        <li class="nav-item"><a class="nav-link" href="referral.html">Referral</a></li>
+        <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<header class="container py-5 text-center rounded-4">
+    <h1 class="fw-bold mb-2">VIP Investment Plans</h1>
+    <p class="mb-0">Create account & get Rs 22 bonus • Duration on all plans: <span class="badge badge-soft">45 days</span></p>
 </header>
 
-<div class="container">
-
-    <!-- Buy Plan -->
-    <div class="card">
-        <h2>Buy Plan</h2>
-        <label>Select VIP Plan:</label>
-        <select id="plan">
-            <option value="VIP-1">VIP-1 ($50)</option>
-            <option value="VIP-2">VIP-2 ($100)</option>
-            <option value="VIP-3">VIP-3 ($200)</option>
-        </select>
-        <button onclick="buyPlan()">Buy Now</button>
-        <p id="buyStatus"></p>
+<section class="container py-5">
+  <div class="row g-4">
+    <!-- Example VIP Card -->
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-center">
+          <span class="fw-semibold">VIP-1</span><span class="badge badge-soft">Starter</span>
+        </div>
+        <div class="card-body">
+          <div class="plan-price mb-2">Price: Rs 500</div>
+          <ul class="mb-3 small text-secondary">
+            <li>Daily Profit: Rs 83</li>
+            <li>Total Profit: Rs 3,735</li>
+            <li>Duration: 45 Days</li>
+          </ul>
+          <a href="deposit.html" class="btn btn-brand btn-sm">Buy Now</a>
+          <a href="#" class="btn btn-outline-light btn-sm">Details</a>
+        </div>
+      </div>
     </div>
 
-    <!-- Deposit -->
-    <div class="card">
-        <h2>Deposit</h2>
-        <label>Amount (USD):</label>
-        <input type="number" id="depositAmount">
-        <label>Transaction ID:</label>
-        <input type="text" id="depositTxId">
-        <button onclick="makeDeposit()">Submit Deposit</button>
-    </div>
+    <!-- باقی VIP پلانز آپ کے کوڈ کے مطابق یہاں رہیں گے -->
+  </div>
+</section>
 
-    <!-- Withdraw -->
-    <div class="card">
-        <h2>Withdraw</h2>
-        <label>Amount (USD):</label>
-        <input type="number" id="withdrawAmount">
-        <label>Transaction ID:</label>
-        <input type="text" id="withdrawTxId">
-        <button onclick="makeWithdraw()">Submit Withdraw</button>
-    </div>
+<div class="footer">&copy; 2025 Trade Hive. All rights reserved.</div>
 
-    <!-- Transaction History -->
-    <div class="card">
-        <h2>Transaction History</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Type</th>
-                    <th>Amount</th>
-                    <th>Transaction ID</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody id="history">
-                <tr>
-                    <td>Deposit</td>
-                    <td>$100</td>
-                    <td>TX12345</td>
-                    <td class="status-pending">Pending</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-</div>
-
-<script>
-function buyPlan() {
-    let plan = document.getElementById("plan").value;
-    document.getElementById("buyStatus").innerHTML = 
-        "✅ " + plan + " purchased successfully (Demo)";
-}
-
-function makeDeposit() {
-    let amount = document.getElementById("depositAmount").value;
-    let txId = document.getElementById("depositTxId").value;
-    if(amount && txId){
-        addHistory("Deposit", amount, txId, "Pending");
-        alert("Deposit submitted (Demo)!");
-    } else {
-        alert("Please enter amount and transaction ID.");
-    }
-}
-
-function makeWithdraw() {
-    let amount = document.getElementById("withdrawAmount").value;
-    let txId = document.getElementById("withdrawTxId").value;
-    if(amount && txId){
-        addHistory("Withdraw", amount, txId, "Pending");
-        alert("Withdraw request submitted (Demo)!");
-    } else {
-        alert("Please enter amount and transaction ID.");
-    }
-}
-
-function addHistory(type, amount, txId, status) {
-    let table = document.getElementById("history");
-    let row = table.insertRow();
-    row.insertCell(0).innerHTML = type;
-    row.insertCell(1).innerHTML = "$" + amount;
-    row.insertCell(2).innerHTML = txId;
-    row.insertCell(3).innerHTML = 
-        status === "Pending" ? '<span class="status-pending">Pending</span>' : 
-        '<span class="status-completed">Completed</span>';
-}
-</script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
